FullQa New/src/objects/GoLive_Implementation_Duration__c.object
<CustomObject>
    <fields>
        <fullName>Business_Hours__c</fullName>
        <formula>Calculated_Business_Seconds__c / 3600</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calc_Est_Date_Formatted__c</fullName>
        <formula>DATEVALUE( Calc_Estimation__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calc Est Date Formatted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Calc_Estimation__c</fullName>
        <label>Calc Estimation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calc_Status__c</fullName>
        <label>Calc Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculated_Business_Seconds__c</fullName>
        <label>Calculated Business Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calculated_Seconds__c</fullName>
        <formula>(Until__c - From__c) * 86400</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CertCapture_Delay__c</fullName>
        <label>CertCapture Delay</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certs_Estimation__c</fullName>
        <label>Certs Estimation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certs_Status__c</fullName>
        <label>Certs Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delay__c</fullName>
        <label>Delay</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <label>GoLive Implementation</label>
        <referenceTo>GoLive_Implementation__c</referenceTo>
        <relationshipLabel>GoLive Implementation Duration</relationshipLabel>
        <relationshipName>GoLive_Implementation_Duration</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Returns_Delay__c</fullName>
        <label>Returns Delay</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Returns_Estimation__c</fullName>
        <label>Returns Estimation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Returns_Status__c</fullName>
        <label>Returns Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SST_Status__c</fullName>
        <label>SST Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <formula>Calculated_Seconds__c / 3600</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Until__c</fullName>
        <label>Until</label>
        <type>DateTime</type>
    </fields>
    <label>GoLive Implementation Duration</label>
    <nameField>
        <displayFormat>D-{00000000}</displayFormat>
        <label>GoLive Implementation Duration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GoLive Implementation Duration</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>